--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -14,13 +14,70 @@
 
 .footer__description {
   color: var(--secondary-text-color);
-  width: 45%;
+  min-width: 45%;
+  font-weight: 500;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.footer-nav {
+  min-width: 45%;
+  justify-content: space-between;
+  display: flex;
+}
+
+.footer__box {
+  display: flex;
+  flex-flow: column;
+  gap: 10px;
+}
+
+.footer-nav__list {
+  display: flex;
+  flex-flow: column;
+  gap: 10px;
+}
+
+.footer__subtitle {
+  font-family: var(--title-font);
+  color: var(--secondary-text-color);
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
+.footer-nav__link {
+  color: var(--secondary-text-color);
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.footer-contacts__adress {
+  color: var(--secondary-text-color);
+  font-style: normal;
+  margin-bottom: 10px;
   font-weight: 500;
   font-size: 18px;
 }
 
-.footer__nav {
-  width: 45%;
-  justify-content: space-between;
-  display: flex;
+.footer-contacts__link {
+  color: var(--secondary-text-color);
+  font-style: normal;
+
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.footer-contacts__phone {
+  font-family: var(--title-font);
+  color: var(--secondary-text-color);
+  font-style: normal;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+.footer-contacts__mail {
+  font-family: var(--title-font);
+  color: var(--secondary-text-color);
+  font-style: normal;
+  font-size: 18px;
 }
