--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,7 @@ p {
 }
 
 .topbar {
-  padding: 10px 0 10px 40px;
+  padding: 10px 0 10px 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -106,38 +106,26 @@ p {
 }
 
 .topbar__quality {
+  display: flex;
+  align-items: center;
+}
+
+.topbar__quality-link {
   color: var(--secondary-text-color);
   border-bottom: 1px solid;
   position: relative;
+  white-space: nowrap;
 }
-.topbar__quality::before {
-  content: "";
-  display: block;
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  top: 50%;
-  transform: translateY(-50%);
-  left: -40px;
-  background-image: url(/images/for-sprite-delete/quality-badge.svg);
-}
-.topbar__quality::after {
-  content: "";
-  display: block;
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  top: 50%;
-  transform: translateY(-50%);
-  right: -40px;
-  background-image: url(/images/for-sprite-delete/big-arrow-icon.svg);
+
+.topbar__planet {
+  fill: currentColor;
 }
 
 .topbar__list {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 40%;
+  min-width: 40%;
 }
 
 .topbar__button {
@@ -176,7 +164,7 @@ p {
 .navbar__list {
   display: flex;
   justify-content: space-between;
-  width: 60%;
+  min-width: 60%;
 }
 
 .vsys-logo {
@@ -218,9 +206,22 @@ p {
   padding: 60px 0 200px 0;
 }
 
+.hero__background-img {
+  background-image: url(/images/hero-decor.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: 0px;
+}
+
 .hero__content {
   display: flex;
   flex-flow: column;
+  position: relative;
+  z-index: 1;
 }
 
 .hero__title {
@@ -295,13 +296,69 @@ p {
 
 .footer__description {
   color: var(--secondary-text-color);
-  width: 45%;
+  min-width: 45%;
+  font-weight: 500;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.footer-nav {
+  min-width: 45%;
+  justify-content: space-between;
+  display: flex;
+}
+
+.footer__box {
+  display: flex;
+  flex-flow: column;
+  gap: 10px;
+}
+
+.footer-nav__list {
+  display: flex;
+  flex-flow: column;
+  gap: 10px;
+}
+
+.footer__subtitle {
+  font-family: var(--title-font);
+  color: var(--secondary-text-color);
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
+.footer-nav__link {
+  color: var(--secondary-text-color);
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.footer-contacts__adress {
+  color: var(--secondary-text-color);
+  font-style: normal;
+  margin-bottom: 10px;
   font-weight: 500;
   font-size: 18px;
 }
 
-.footer__nav {
-  width: 45%;
-  justify-content: space-between;
-  display: flex;
+.footer-contacts__link {
+  color: var(--secondary-text-color);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.footer-contacts__phone {
+  font-family: var(--title-font);
+  color: var(--secondary-text-color);
+  font-style: normal;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+.footer-contacts__mail {
+  font-family: var(--title-font);
+  color: var(--secondary-text-color);
+  font-style: normal;
+  font-size: 18px;
 }/*# sourceMappingURL=main.css.map */
