--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -11,18 +11,22 @@
   }
 }
 
-// .hero__background-img {
-//   background-image: url(/images/hero-decor.svg);
-//   background-size: contain;
-//   background-repeat: no-repeat;
-//   width: 100%;
-//   height: 100%;
-//   position: absolute;
-// }
+.hero__background-img {
+  background-image: url(/images/hero-decor.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: 0px;
+}
 
 .hero__content {
   display: flex;
   flex-flow: column;
+  position: relative;
+  z-index: 1;
 }
 
 .hero__title {
