--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -5,6 +5,8 @@
   --primary-text-color: #212121;
   --secondary-text-color: #ffffff;
   --light-blue-text: #a8d5f8;
+  --grey-text-color: #6c6c6c;
+  --price-accent-color: #333d5e;
 
   --accent-color: #4aa7f0;
 
