--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,4 +2,6 @@
 @import "./base/variables";
 @import "./components/header";
 @import "./components/hero";
+@import "./components/prices";
+@import "./components/faq";
 @import "./components/footer";
