--- a/sass/base/_utils.scss
+++ b/sass/base/_utils.scss
@@ -55,6 +55,12 @@ p {
   padding: 60px 0;
 }
 
+.section-title {
+  text-transform: uppercase;
+  font-size: 40px;
+  font-family: var(--title-font);
+}
+
 .menu-arrow {
   display: inline-block;
   width: 0;
@@ -70,4 +76,11 @@ p {
 .text--blue {
   font-weight: 600;
   color: var(--light-blue-text);
+}
+
+.section-title {
+  font-size: 40px;
+  background: -webkit-linear-gradient(#333d5e, #4aa7f0);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
