--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -25,7 +25,11 @@
   white-space: nowrap;
 }
 
-.topbar__planet {
+.planet-icon {
+  fill: currentColor;
+}
+
+.big-arrow {
   fill: currentColor;
 }
 
@@ -47,6 +51,11 @@
   padding: 6px 16px;
   white-space: nowrap;
   cursor: pointer;
+
+  &:hover {
+    color: var(--secondary-background-color);
+    background-color: var(--primary-background-color);
+  }
 }
 
 .topbar__button--white {
@@ -60,6 +69,11 @@
   display: flex;
   align-items: center;
   text-transform: none;
+
+  &:hover {
+    background-color: var(--secondary-background-color);
+    color: var(--secondary-text-color);
+  }
 }
 
 .navbar {
@@ -74,6 +88,22 @@
   justify-content: space-between;
   min-width: 60%;
 }
+
+.navbar__item {
+  position: relative;
+}
+
+// .navbar__dropdown {
+//   z-index: 1;
+//   position: absolute;
+//   top: 100%;
+//   left: 0;
+//   display: none;
+// }
+
+// .navbar__item:hover .navbar__dropdown {
+//   display: block;
+// }
 
 .vsys-logo {
   font-family: var(--title-font);
