--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -26,7 +26,6 @@
   display: flex;
   flex-flow: column;
   position: relative;
-  z-index: 1;
 }
 
 .hero__title {
@@ -75,6 +74,7 @@
   font-weight: 600;
   padding: 20px;
   white-space: nowrap;
+  cursor: pointer;
 }
 
 .hero__button--white {
