--- a/css/main.css
+++ b/css/main.css
@@ -38,19 +38,16 @@ p {
   margin-left: auto;
   margin-right: auto;
 }
-
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
   }
 }
-
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
   }
 }
-
 @media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
@@ -72,9 +69,8 @@ p {
   width: 0;
   height: 0;
   margin-left: 2px;
-  vertical-align: middle;
   border-top: 4px dashed;
-  border-top: 4px solid\9;
+  border-top: 4px solid\9 ;
   border-right: 4px solid transparent;
   border-left: 4px solid transparent;
 }
@@ -139,8 +135,12 @@ p {
   fill: currentColor;
 }
 
+.quality-badge {
+  fill: transparent;
+}
+
 .big-arrow {
-  fill: currentColor;
+  fill: var(--secondary-text-color);
 }
 
 .topbar__list {
@@ -159,10 +159,11 @@ p {
   border: 1px solid var(--secondary-text-color);
   border-radius: 8px;
   padding: 6px 16px;
+  display: flex;
+  align-items: center;
   white-space: nowrap;
   cursor: pointer;
 }
-
 .topbar__button:hover {
   color: var(--secondary-background-color);
   background-color: var(--primary-background-color);
@@ -180,7 +181,6 @@ p {
   align-items: center;
   text-transform: none;
 }
-
 .topbar__button--lang:hover {
   background-color: var(--secondary-background-color);
   color: var(--secondary-text-color);
@@ -201,18 +201,6 @@ p {
 
 .navbar__item {
   position: relative;
-}
-
-.navbar__dropdown {
-  z-index: 1;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  display: none;
-}
-
-.navbar__dropdown--open {
-  display: block;
 }
 
 .vsys-logo {
@@ -244,13 +232,35 @@ p {
   font-size: 14px;
   text-transform: uppercase;
   padding: 15px 5px;
+  align-items: center;
+  display: flex;
+}
+
+.navbar-dropdown {
+  z-index: 1;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  padding: 10px;
+  display: none;
+  background-color: var(--secondary-text-color);
+  color: var(--primary-text-color);
+}
+
+.navbar__item--open + .navbar-dropdown {
+  display: block;
+}
+
+.navbar-dropdown__link {
+  white-space: nowrap;
+  width: 100%;
+  padding: 10px;
 }
 
 .hero {
   position: relative;
   background: linear-gradient(180deg, #191f32 2.92%, #305e8a 49.72%, #4aa7f0 97.41%);
 }
-
 .hero .section {
   padding: 60px 0 200px 0;
 }
@@ -353,7 +363,6 @@ p {
   background-color: var(--secondary-text-color);
   border-radius: 15px 15px 0 0;
 }
-
 .prices-menu__item:hover {
   padding-top: 19px;
   scale: 1.05;
@@ -402,11 +411,9 @@ p {
   align-items: center;
   padding: 10px 0;
 }
-
 .accordion__btn:focus + .accordion__info {
   max-height: max-content;
 }
-
 .accordion__btn:focus > .accordion__arrow {
   transform: rotate(0);
 }
@@ -442,7 +449,6 @@ p {
   background-color: var(--secondary-background-color);
   padding: 40px 0;
 }
-
 .footer .vsys-logo {
   margin-bottom: 20px;
 }
@@ -519,5 +525,4 @@ p {
   color: var(--secondary-text-color);
   font-style: normal;
   font-size: 18px;
-}
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
