--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ p {
   display: inline-block;
   width: 0;
   height: 0;
-  margin-left: 2px;
+  margin-left: 5px;
   border-top: 4px dashed;
   border-top: 4px solid\9 ;
   border-right: 4px solid transparent;
@@ -85,6 +85,46 @@ p {
   background: -webkit-linear-gradient(#333d5e, #4aa7f0);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.dropdown__list {
+  color: var(--secondary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  text-transform: uppercase;
+  padding: 15px 5px;
+  align-items: center;
+  display: flex;
+}
+.dropdown__list:hover, .dropdown__list:focus {
+  color: var(--accent-color);
+}
+
+.navbar-dropdown {
+  z-index: 1;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  display: none;
+  background-color: var(--secondary-text-color);
+  color: var(--primary-text-color);
+  margin-top: 14px;
+  padding: 0;
+}
+
+.dropdown__link {
+  font-size: 14px;
+  text-transform: uppercase;
+  color: var(--primary-text-color);
+  white-space: nowrap;
+  padding: 10px 15px;
+}
+.dropdown__link:hover, .dropdown__link:focus {
+  background-color: var(--light-blue-text);
+}
+
+.dropdown__button--open + .navbar-dropdown {
+  display: block;
 }
 
 :root {
@@ -147,11 +187,12 @@ p {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  min-width: 40%;
+  min-width: 30%;
 }
 
 .topbar__button {
   font-family: var(--primary-font);
+  font-size: 14px;
   font-weight: 500;
   text-transform: uppercase;
   background-color: var(--secondary-background-color);
@@ -196,6 +237,7 @@ p {
 .navbar__list {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   min-width: 60%;
 }
 
@@ -224,37 +266,6 @@ p {
 
 .vsys-logo__virtual {
   color: #4aa7f0;
-}
-
-.navbar__link {
-  color: var(--secondary-text-color);
-  font-weight: 500;
-  font-size: 14px;
-  text-transform: uppercase;
-  padding: 15px 5px;
-  align-items: center;
-  display: flex;
-}
-
-.navbar-dropdown {
-  z-index: 1;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  padding: 10px;
-  display: none;
-  background-color: var(--secondary-text-color);
-  color: var(--primary-text-color);
-}
-
-.navbar__item--open + .navbar-dropdown {
-  display: block;
-}
-
-.navbar-dropdown__link {
-  white-space: nowrap;
-  width: 100%;
-  padding: 10px;
 }
 
 .hero {
@@ -324,7 +335,8 @@ p {
 .hero__button {
   font-size: 15px;
   font-weight: 600;
-  padding: 20px;
+  padding: 15px 20px;
+  border-radius: 10px;
   white-space: nowrap;
   cursor: pointer;
 }
