--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -41,11 +41,12 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  min-width: 40%;
+  min-width: 30%;
 }
 
 .topbar__button {
   font-family: var(--primary-font);
+  font-size: 14px;
   font-weight: 500;
   text-transform: uppercase;
   background-color: var(--secondary-background-color);
@@ -67,6 +68,13 @@
 .topbar__button--white {
   background-color: var(--secondary-text-color);
   color: var(--secondary-background-color);
+
+  // &:hover,
+  // &:focus {
+  //   color: var(--secondary-text-color);
+  //   background-color: var(--accent-color);
+  //   border-color: var(--accent-color);
+  // }
 }
 
 .topbar__button--lang {
@@ -92,6 +100,7 @@
 .navbar__list {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   min-width: 60%;
 }
 
@@ -124,33 +133,6 @@
   color: #4aa7f0;
 }
 
-.navbar__link {
-  color: var(--secondary-text-color);
-  font-weight: 500;
-  font-size: 14px;
-  text-transform: uppercase;
-  padding: 15px 5px;
-  align-items: center;
-  display: flex;
-}
+// .lang__list {
 
-.navbar-dropdown {
-  z-index: 1;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  padding: 10px;
-  display: none;
-  background-color: var(--secondary-text-color);
-  color: var(--primary-text-color);
-}
-
-.navbar__item--open + .navbar-dropdown {
-  display: block;
-}
-
-.navbar-dropdown__link {
-  white-space: nowrap;
-  width: 100%;
-  padding: 10px;
-}
+// }
