--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -72,7 +72,8 @@
 .hero__button {
   font-size: 15px;
   font-weight: 600;
-  padding: 20px;
+  padding: 15px 20px;
+  border-radius: 10px;
   white-space: nowrap;
   cursor: pointer;
 }
