--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -14,6 +14,7 @@
 }
 
 .topbar__quality {
+  color: var(--secondary-text-color);
   display: flex;
   align-items: center;
 }
@@ -23,18 +24,31 @@
   border-bottom: 1px solid;
   position: relative;
   white-space: nowrap;
+
+  &:hover,
+  &:focus {
+    color: var(--light-blue-text);
+  }
+
+  // &:hover > .big-arrow {
+  //   fill: var(--light-blue-text);
+  // }
+}
+
+.quality-badge__svg {
+  fill: transparent;
 }
 
 .planet-icon {
   fill: currentColor;
 }
 
-.quality-badge {
-  fill: transparent;
-}
-
 .big-arrow {
   fill: var(--secondary-text-color);
+
+  &:hover {
+    fill: var(--light-blue-text);
+  }
 }
 
 .topbar__list {
@@ -58,6 +72,8 @@
   align-items: center;
   white-space: nowrap;
   cursor: pointer;
+  transition: background-color 300ms var(--timing-function),
+    color 300ms var(--timing-function);
 
   &:hover {
     color: var(--secondary-background-color);
@@ -69,25 +85,31 @@
   background-color: var(--secondary-text-color);
   color: var(--secondary-background-color);
 
-  // &:hover,
-  // &:focus {
-  //   color: var(--secondary-text-color);
-  //   background-color: var(--accent-color);
-  //   border-color: var(--accent-color);
-  // }
+  &:hover,
+  &:focus {
+    // color: var(--secondary-text-color);
+    background-color: var(--light-blue-text);
+    border-color: var(--light-blue-text);
+  }
 }
 
-.topbar__button--lang {
+.button-lang {
   padding: 0;
   border: none;
   display: flex;
   align-items: center;
   text-transform: none;
+  width: 100%;
 
   &:hover {
     background-color: var(--secondary-background-color);
-    color: var(--secondary-text-color);
+    color: var(--light-blue-text);
   }
+}
+
+.button-lang__list {
+  width: 100%;
+  margin-top: 10px;
 }
 
 .navbar {
@@ -112,7 +134,7 @@
   font-family: var(--title-font);
   text-transform: uppercase;
   color: #ffffff;
-  font-size: 14px;
+  font-size: 16px;
   position: relative;
 }
 
