--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,6 @@ a {
 
 img {
   display: block;
-  max-width: 100%;
   height: auto;
 }
 
@@ -95,6 +94,7 @@ p {
   padding: 15px 5px;
   align-items: center;
   display: flex;
+  transition: color 300ms var(--timing-function);
 }
 .dropdown__list:hover, .dropdown__list:focus {
   color: var(--accent-color);
@@ -108,8 +108,11 @@ p {
   display: none;
   background-color: var(--secondary-text-color);
   color: var(--primary-text-color);
-  margin-top: 14px;
   padding: 0;
+}
+
+.dropdown--mt14 {
+  margin-top: 14px;
 }
 
 .dropdown__link {
@@ -118,6 +121,7 @@ p {
   color: var(--primary-text-color);
   white-space: nowrap;
   padding: 10px 15px;
+  transition: background-color 300ms var(--timing-function);
 }
 .dropdown__link:hover, .dropdown__link:focus {
   background-color: var(--light-blue-text);
@@ -140,6 +144,7 @@ p {
   /* --secondary-background-color: linear-gradient(red, yellow); */
   --secondary-background-color: #191f32;
   --opacity-text-color: rgba(255, 255, 255, 0.6);
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   /* --card-set-gap: 30px; */
   /* --timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
@@ -160,6 +165,7 @@ p {
 }
 
 .topbar__quality {
+  color: var(--secondary-text-color);
   display: flex;
   align-items: center;
 }
@@ -170,17 +176,23 @@ p {
   position: relative;
   white-space: nowrap;
 }
+.topbar__quality-link:hover, .topbar__quality-link:focus {
+  color: var(--light-blue-text);
+}
+
+.quality-badge__svg {
+  fill: transparent;
+}
 
 .planet-icon {
   fill: currentColor;
 }
 
-.quality-badge {
-  fill: transparent;
-}
-
 .big-arrow {
   fill: var(--secondary-text-color);
+}
+.big-arrow:hover {
+  fill: var(--light-blue-text);
 }
 
 .topbar__list {
@@ -204,6 +216,7 @@ p {
   align-items: center;
   white-space: nowrap;
   cursor: pointer;
+  transition: background-color 300ms var(--timing-function), color 300ms var(--timing-function);
 }
 .topbar__button:hover {
   color: var(--secondary-background-color);
@@ -214,17 +227,27 @@ p {
   background-color: var(--secondary-text-color);
   color: var(--secondary-background-color);
 }
+.topbar__button--white:hover, .topbar__button--white:focus {
+  background-color: var(--light-blue-text);
+  border-color: var(--light-blue-text);
+}
 
-.topbar__button--lang {
+.button-lang {
   padding: 0;
   border: none;
   display: flex;
   align-items: center;
   text-transform: none;
+  width: 100%;
 }
-.topbar__button--lang:hover {
+.button-lang:hover {
   background-color: var(--secondary-background-color);
-  color: var(--secondary-text-color);
+  color: var(--light-blue-text);
+}
+
+.button-lang__list {
+  width: 100%;
+  margin-top: 10px;
 }
 
 .navbar {
@@ -249,7 +272,7 @@ p {
   font-family: var(--title-font);
   text-transform: uppercase;
   color: #ffffff;
-  font-size: 14px;
+  font-size: 16px;
   position: relative;
 }
 
@@ -296,28 +319,28 @@ p {
 .hero__title {
   font-family: var(--title-font);
   font-size: 40px;
-  line-height: 50px;
+  line-height: 1.3;
   width: 100%;
   order: 1;
   margin-bottom: 40px;
+  text-transform: uppercase;
   color: #ffffff;
 }
 
 .hero__box {
   display: flex;
   justify-content: space-between;
-  gap: 5%;
   order: 2;
 }
 
 .hero__info {
-  width: 65%;
+  width: 60%;
 }
 
 .hero__description {
   color: var(--secondary-text-color);
-  font-size: 24px;
-  padding-bottom: 40px;
+  font-size: 20px;
+  padding-bottom: 20px;
 }
 
 .hero__buttons {
@@ -328,8 +351,12 @@ p {
 .hero__image {
   display: flex;
   justify-content: center;
-  width: 25%;
+  width: 30%;
   order: 3;
+}
+
+.hero__svg {
+  min-width: fit-content;
 }
 
 .hero__button {
@@ -345,11 +372,20 @@ p {
   color: var(--accent-color);
   background-color: var(--primary-background-color);
 }
+.hero__button--white:hover {
+  color: var(--secondary-text-color);
+  background-color: transparent;
+}
 
 .hero__button--blue {
   color: var(--secondary-text-color);
   background-color: transparent;
   border: 1px solid var(--primary-background-color);
+  transition: border 300ms var(--timing-function), background-color 300ms var(--timing-function), color 300ms var(--timing-function);
+}
+.hero__button--blue:hover {
+  color: var(--accent-color);
+  background-color: var(--primary-background-color);
 }
 
 .prices-container {
@@ -371,16 +407,32 @@ p {
   display: flex;
   gap: 10px;
   width: 25%;
-  padding: 20px;
+  padding: 20px 15px 15px 15px;
   background-color: var(--secondary-text-color);
   border-radius: 15px 15px 0 0;
+  justify-content: space-between;
+  transition: scale 300ms var(--timing-function);
 }
 .prices-menu__item:hover {
-  padding-top: 19px;
+  padding: 19px 14px 14px 14px;
   scale: 1.05;
   border-top: 1px solid var(--price-accent-color);
   border-left: 1px solid var(--price-accent-color);
   border-right: 1px solid var(--price-accent-color);
+}
+
+.prices-menu__img {
+  width: 60px;
+  height: 60px;
+}
+
+.prices-menu__svg {
+  margin: 0 auto;
+  width: 100%;
+}
+
+.prices-menu__content {
+  width: 70%;
 }
 
 .prices-menu__title {
@@ -391,6 +443,7 @@ p {
   text-transform: uppercase;
   margin-bottom: 5px;
   text-align: center;
+  white-space: nowrap;
 }
 
 .prices-menu__info {
@@ -403,6 +456,10 @@ p {
   color: var(--price-accent-color);
   font-weight: 600;
   font-size: 16px;
+}
+
+.faq {
+  position: relative;
 }
 
 .accordion {
@@ -427,7 +484,7 @@ p {
   max-height: max-content;
 }
 .accordion__btn:focus > .accordion__arrow {
-  transform: rotate(0);
+  transform: rotate(90deg);
 }
 
 .accordion__title {
@@ -450,7 +507,8 @@ p {
 
 .accordion__arrow {
   fill: currentColor;
-  transform: rotate(-90deg);
+  transform: rotate(0deg);
+  transition: transform 300ms var(--timing-function);
 }
 
 .accordion__svg {
@@ -507,6 +565,10 @@ p {
   color: var(--secondary-text-color);
   font-weight: 500;
   font-size: 16px;
+  transition: color 300ms var(--timing-function);
+}
+.footer-nav__link:hover {
+  color: var(--accent-color);
 }
 
 .footer-contacts__adress {
@@ -537,4 +599,42 @@ p {
   color: var(--secondary-text-color);
   font-style: normal;
   font-size: 18px;
+}
+
+.footer__socials {
+  min-width: 25%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__payment {
+  display: flex;
+  min-width: 45%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.xxx {
+  display: flex;
+  justify-content: space-between;
+  gap: 30%;
+  margin-top: 30px;
+}
+
+.footer__payment-link {
+  width: 70px;
+  height: 40px;
+  background-color: var(--primary-background-color);
+  display: flex;
+  align-items: center;
+  border-radius: 4px;
+}
+
+.footer__payment-img {
+  margin: 0 auto;
+}
+
+.footer__payment > .footer__subtitle {
+  width: 70px;
+  align-items: center;
 }/*# sourceMappingURL=main.css.map */
