--- a/sass/components/_faq.scss
+++ b/sass/components/_faq.scss
@@ -1,3 +1,16 @@
+.faq {
+  position: relative;
+}
+
+// .faq-background {
+//   background-image: url(/images/faq-bcg.svg);
+//   background-repeat: no-repeat;
+//   width: 100%;
+//   height: 100%;
+//   position: absolute;
+//   bottom: 0px;
+// }
+
 .accordion {
   width: 50%;
 }
@@ -21,7 +34,7 @@
   }
 
   &:focus > .accordion__arrow {
-    transform: rotate(0);
+    transform: rotate(90deg);
   }
 }
 
@@ -45,7 +58,8 @@
 
 .accordion__arrow {
   fill: currentColor;
-  transform: rotate(-90deg);
+  transform: rotate(0deg);
+  transition: transform 300ms var(--timing-function);
 }
 
 .accordion__svg {
