--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+
   background-color: var(--secondary-background-color);
   padding: 40px 0;
 
@@ -6,6 +7,7 @@
     margin-bottom: 20px;
   }
 }
+
 
 .footer__content {
   display: flex;
@@ -49,6 +51,11 @@
   color: var(--secondary-text-color);
   font-weight: 500;
   font-size: 16px;
+  transition: color 300ms var(--timing-function);
+
+  &:hover {
+    color: var(--accent-color);
+  }
 }
 
 .footer-contacts__adress {
@@ -81,3 +88,45 @@
   font-style: normal;
   font-size: 18px;
 }
+
+.footer__socials {
+  min-width: 25%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__payment {
+  display: flex;
+  min-width: 45%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.xxx {
+  display: flex;
+  justify-content: space-between;
+  gap: 30%;
+  margin-top: 30px;
+}
+
+.footer__payment-link {
+  width: 70px;
+  height: 40px;
+  background-color: var(--primary-background-color);
+  display: flex;
+  align-items: center;
+  border-radius: 4px;
+}
+
+.footer__payment-img {
+  margin: 0 auto;
+}
+
+.footer__payment > .footer__subtitle {
+  width: 70px;
+  align-items: center;
+}
+
+// .footer__payment-item {
+
+// }
