--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -31,10 +31,11 @@
 .hero__title {
   font-family: var(--title-font);
   font-size: 40px;
-  line-height: 50px;
+  line-height: 1.3;
   width: 100%;
   order: 1;
   margin-bottom: 40px;
+  text-transform: uppercase;
 
   color: #ffffff;
 }
@@ -43,18 +44,17 @@
   display: flex;
   justify-content: space-between;
 
-  gap: 5%;
   order: 2;
 }
 
 .hero__info {
-  width: 65%;
+  width: 60%;
 }
 
 .hero__description {
   color: var(--secondary-text-color);
-  font-size: 24px;
-  padding-bottom: 40px;
+  font-size: 20px;
+  padding-bottom: 20px;
 }
 
 .hero__buttons {
@@ -65,8 +65,11 @@
 .hero__image {
   display: flex;
   justify-content: center;
-  width: 25%;
+  width: 30%;
   order: 3;
+}
+.hero__svg {
+  min-width: fit-content;
 }
 
 .hero__button {
@@ -81,10 +84,23 @@
 .hero__button--white {
   color: var(--accent-color);
   background-color: var(--primary-background-color);
+
+  &:hover {
+    color: var(--secondary-text-color);
+    background-color: transparent;
+  }
 }
 
 .hero__button--blue {
   color: var(--secondary-text-color);
   background-color: transparent;
   border: 1px solid var(--primary-background-color);
+  transition: border 300ms var(--timing-function),
+    background-color 300ms var(--timing-function),
+    color 300ms var(--timing-function);
+
+  &:hover {
+    color: var(--accent-color);
+    background-color: var(--primary-background-color);
+  }
 }
