--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -104,3 +104,17 @@
     background-color: var(--primary-background-color);
   }
 }
+
+// .o-hidden {
+//   width: 100;
+//   overflow: hidden;
+// }
+
+// .slider-content {
+//   display: flex;
+//   transition: transform 500ms;
+// }
+
+// .fs-0 {
+//   flex-shrink: 0;
+// }
