--- a/sass/base/_utils.scss
+++ b/sass/base/_utils.scss
@@ -37,6 +37,7 @@ p {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+  box-sizing: border-box;
 
   @media screen and (min-width: 480px) {
     width: 480px;
