--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 30%;
 }
 
 .topbar--bottomline {
@@ -17,6 +18,7 @@
   color: var(--secondary-text-color);
   display: flex;
   align-items: center;
+  width: 50%;
 }
 
 .topbar__quality-link {
@@ -55,7 +57,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  min-width: 30%;
+  width: 50%;
 }
 
 .topbar__button {
@@ -158,3 +160,15 @@
 // .lang__list {
 
 // }
+
+@media screen and (max-width: 1199px) {
+  .topbar {
+    gap: 0%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .topbar {
+    gap: 30%;
+  }
+}
