--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -56,7 +56,7 @@
   padding-bottom: 20px;
 }
 
-.hero__buttons {
+.hero__button {
   display: flex;
   gap: 20px;
 }
@@ -124,7 +124,7 @@
     width: 100%;
   }
 
-  .hero__buttons {
+  .hero__button {
     gap: 80px;
     justify-content: center;
   }
