--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -56,7 +56,7 @@
   padding-bottom: 20px;
 }
 
-.hero__button {
+.hero__buttons {
   display: flex;
   gap: 20px;
 }
@@ -104,6 +104,26 @@
   }
 }
 
+.slider__viewbox {
+  overflow: hidden;
+}
+
+.slider-content {
+  display: flex;
+  flex-wrap: nowrap;
+  transition: transform 300ms var(--timing-function);
+}
+
+.slider__container {
+  width: 100%;
+  flex-shrink: 0;
+}
+
+.slider__controls {
+  position: relative;
+  z-index: 1;
+}
+
 @media screen and (max-width: 1199px) {
   .hero__thumb {
     display: flex;
@@ -124,7 +144,7 @@
     width: 100%;
   }
 
-  .hero__button {
+  .hero__buttons {
     gap: 80px;
     justify-content: center;
   }
