--- a/css/main.css
+++ b/css/main.css
@@ -533,7 +533,7 @@ p {
   padding: 10px 0;
 }
 .accordion__btn:focus + .accordion__info {
-  max-height: max-content;
+  max-height: 2rem;
 }
 .accordion__btn:focus > .accordion__arrow {
   transform: rotate(90deg);
@@ -549,12 +549,13 @@ p {
 
 .accordion__info {
   color: var(--grey-text-color);
-  max-height: 0;
+  max-height: 0rem;
   overflow: hidden;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.25;
   margin-bottom: 10px;
+  transition: max-height 300ms var(--timing-function);
 }
 
 .accordion__arrow {
