--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,10 +1,12 @@
 :root {
   --primary-font: "IBM Plex Sans", sans-serif;
-  --title-font: "Fira Sans Condensed", sans-serif;
+  --logo-font: "Fira Sans Condensed", sans-serif;
+
   // --title-font: "Nunito Sans", sans-serif;
-  // --title-font: "Inter", sans-serif;
-  // -------title-font: "Lato", sans-serif;
-  // -------title-font: "Libre Franklin", sans-serif;
+  --title-font: "Inter", sans-serif;
+  --buttons-font: "Inter", sans-serif;
+  // --title-font: "Lato", sans-serif;
+  // --title-font: "Libre Franklin", sans-serif;
   // --title-font: "Montserrat", sans-serif;
 
   --primary-text-color: #212121;
