--- a/css/main.css
+++ b/css/main.css
@@ -54,10 +54,6 @@ p {
   }
 }
 
-.section {
-  padding: 60px 0;
-}
-
 .section-title {
   text-transform: uppercase;
   font-size: 40px;
@@ -132,9 +128,85 @@ p {
   display: block;
 }
 
+.mobile-open {
+  overflow: hidden;
+}
+
+.menu-button {
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  z-index: 2;
+}
+.menu-button .icon-close {
+  display: none;
+}
+
+.icon-menu {
+  fill: currentColor;
+}
+
+.icon-close {
+  fill: currentColor;
+}
+
+.menu-button.is-open .icon-close {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+.menu-social {
+  display: none;
+}
+
+.site-nav__link.site-nav__link--active {
+  color: var(--accent-color);
+}
+
+.mobile-menu {
+  width: 60%;
+}
+
+@media screen and (max-width: 767px) {
+  .mobile-menu {
+    position: fixed;
+    left: 0;
+    top: 80px;
+    width: 100vw;
+    height: 100vh;
+    background-color: transparent;
+    opacity: 0;
+    transform: translateY(-100%);
+    transition: transform 250ms var(--timing-function), opacity 250ms var(--timing-function);
+  }
+  .mobile-menu.is-open {
+    opacity: 1;
+    transform: translateY(0%);
+    background: linear-gradient(180deg, #191f32 2.92%, #305e8a 49.72%, #4aa7f0 97.41%);
+    z-index: 1;
+  }
+  .mobile-menu .navbar__list {
+    flex-flow: column;
+  }
+}
+@media screen and (max-width: 767px) and (min-width: 768px) {
+  .mobile-menu {
+    display: flex;
+  }
+  .menu-button {
+    display: none;
+  }
+}
 :root {
   --primary-font: "IBM Plex Sans", sans-serif;
-  --title-font: "Fira Sans Condensed", sans-serif;
+  --logo-font: "Fira Sans Condensed", sans-serif;
+  --title-font: "Inter", sans-serif;
+  --buttons-font: "Inter", sans-serif;
   --primary-text-color: #212121;
   --secondary-text-color: #ffffff;
   --light-blue-text: #a8d5f8;
@@ -256,7 +328,7 @@ p {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 0 15px 15px;
+  padding: 15px 0 15px 0;
 }
 
 .navbar__list {
@@ -271,11 +343,12 @@ p {
 }
 
 .vsys-logo {
-  font-family: var(--title-font);
+  font-family: var(--logo-font);
   text-transform: uppercase;
   color: #ffffff;
   font-size: 16px;
   position: relative;
+  white-space: nowrap;
 }
 
 .vsys-logo--christmas-hat::before {
@@ -286,16 +359,19 @@ p {
   top: -25px;
   width: 50px;
   height: 54px;
-  background-image: url(/images/for-sprite-delete/christmas-hat.svg);
 }
 
 .vsys-logo__virtual {
   color: #4aa7f0;
 }
 
+.menu-button {
+  display: none;
+}
+
 @media screen and (max-width: 1199px) {
   .topbar {
-    gap: 2%;
+    gap: 5%;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -303,12 +379,31 @@ p {
     gap: 30%;
   }
 }
+@media screen and (max-width: 767px) {
+  .topbar {
+    display: none;
+  }
+  .menu-button {
+    display: inline-flex;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    z-index: 2;
+    color: aliceblue;
+  }
+}
+.slider__controls {
+  display: none;
+}
+
 .hero {
   position: relative;
   background: linear-gradient(180deg, #191f32 2.92%, #305e8a 49.72%, #4aa7f0 97.41%);
 }
 .hero .section {
-  padding: 60px 0 200px 0;
+  padding-top: 40px;
+  padding-bottom: 200px;
 }
 
 .hero__background-img {
@@ -333,6 +428,7 @@ p {
   font-size: 40px;
   line-height: 1.3;
   width: 100%;
+  letter-spacing: 2px;
   margin-bottom: 40px;
   text-transform: uppercase;
   color: #ffffff;
@@ -371,8 +467,11 @@ p {
 }
 
 .hero__button {
+  font-family: var(--buttons-font);
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
   font-size: 15px;
-  font-weight: 600;
+  font-weight: 500;
   padding: 15px 20px;
   border-radius: 10px;
   white-space: nowrap;
@@ -438,6 +537,11 @@ p {
   .hero__buttons {
     gap: 80px;
     justify-content: center;
+  }
+}
+@media screen and (max-width: 767px) {
+  .hero-buttons {
+    flex-flow: column;
   }
 }
 .prices__container {
