--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "./base/_utils";
+@import "./components/menu";
 @import "./base/variables";
 @import "./components/header";
 @import "./components/hero";
