--- a/css/main.css
+++ b/css/main.css
@@ -83,125 +83,6 @@ p {
   -webkit-text-fill-color: transparent;
 }
 
-.dropdown__list {
-  color: var(--secondary-text-color);
-  font-weight: 500;
-  font-size: 14px;
-  text-transform: uppercase;
-  padding: 15px 5px;
-  align-items: center;
-  display: flex;
-  transition: color 300ms var(--timing-function);
-}
-.dropdown__list:hover, .dropdown__list:focus {
-  color: var(--accent-color);
-}
-
-.navbar-dropdown {
-  z-index: 1;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  display: none;
-  background-color: var(--secondary-text-color);
-  color: var(--primary-text-color);
-  padding: 0;
-}
-
-.dropdown--mt14 {
-  margin-top: 14px;
-}
-
-.dropdown__link {
-  font-size: 14px;
-  text-transform: uppercase;
-  color: var(--primary-text-color);
-  white-space: nowrap;
-  padding: 10px 15px;
-  transition: background-color 300ms var(--timing-function);
-}
-.dropdown__link:hover, .dropdown__link:focus {
-  background-color: var(--light-blue-text);
-}
-
-.dropdown__button--open + .navbar-dropdown {
-  display: block;
-}
-
-.mobile-open {
-  overflow: hidden;
-}
-
-.menu-button {
-  display: inline-flex;
-  margin: 0;
-  padding: 0;
-  border: none;
-  background-color: transparent;
-  z-index: 2;
-}
-.menu-button .icon-close {
-  display: none;
-}
-
-.icon-menu {
-  fill: currentColor;
-}
-
-.icon-close {
-  fill: currentColor;
-}
-
-.menu-button.is-open .icon-close {
-  display: block;
-}
-
-.menu-button.is-open .icon-menu {
-  display: none;
-}
-
-.menu-social {
-  display: none;
-}
-
-.site-nav__link.site-nav__link--active {
-  color: var(--accent-color);
-}
-
-.mobile-menu {
-  width: 60%;
-}
-
-@media screen and (max-width: 767px) {
-  .mobile-menu {
-    position: fixed;
-    left: 0;
-    top: 80px;
-    width: 100vw;
-    height: 100vh;
-    background-color: transparent;
-    opacity: 0;
-    transform: translateY(-100%);
-    transition: transform 250ms var(--timing-function), opacity 250ms var(--timing-function);
-  }
-  .mobile-menu.is-open {
-    opacity: 1;
-    transform: translateY(0%);
-    background: linear-gradient(180deg, #191f32 2.92%, #305e8a 49.72%, #4aa7f0 97.41%);
-    z-index: 1;
-  }
-  .mobile-menu .navbar__list {
-    flex-flow: column;
-  }
-}
-@media screen and (max-width: 767px) and (min-width: 768px) {
-  .mobile-menu {
-    display: flex;
-  }
-  .menu-button {
-    display: none;
-  }
-}
 :root {
   --primary-font: "IBM Plex Sans", sans-serif;
   --logo-font: "Fira Sans Condensed", sans-serif;
@@ -351,6 +232,51 @@ p {
   white-space: nowrap;
 }
 
+.dropdown__list {
+  color: var(--secondary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  text-transform: uppercase;
+  padding: 15px 5px;
+  align-items: center;
+  display: flex;
+  transition: color 300ms var(--timing-function);
+}
+.dropdown__list:hover, .dropdown__list:focus {
+  color: var(--accent-color);
+}
+
+.navbar-dropdown {
+  z-index: 1;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  display: none;
+  background-color: var(--secondary-text-color);
+  color: var(--primary-text-color);
+  padding: 0;
+}
+
+.dropdown--mt14 {
+  margin-top: 14px;
+}
+
+.dropdown__link {
+  font-size: 14px;
+  text-transform: uppercase;
+  color: var(--primary-text-color);
+  white-space: nowrap;
+  padding: 10px 15px;
+  transition: background-color 300ms var(--timing-function);
+}
+.dropdown__link:hover, .dropdown__link:focus {
+  background-color: var(--light-blue-text);
+}
+
+.dropdown__button--open + .navbar-dropdown {
+  display: block;
+}
+
 .vsys-logo--christmas-hat::before {
   content: "";
   display: block;
@@ -365,18 +291,56 @@ p {
   color: #4aa7f0;
 }
 
+.mobile-open {
+  overflow: hidden;
+}
+
 .menu-button {
   display: none;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  z-index: 2;
+}
+.menu-button .icon-close {
+  display: none;
+}
+
+.icon-menu {
+  fill: currentColor;
+}
+
+.icon-close {
+  fill: currentColor;
+}
+
+.menu-button.is-open .icon-close {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+.menu-social {
+  display: none;
+}
+
+.site-nav__link.site-nav__link--active {
+  color: var(--accent-color);
+}
+
+.mobile-menu {
+  width: 60%;
 }
 
 @media screen and (max-width: 1199px) {
   .topbar {
     gap: 5%;
   }
-}
-@media screen and (min-width: 1200px) {
-  .topbar {
-    gap: 30%;
+  .mobile-menu {
+    width: 100%;
   }
 }
 @media screen and (max-width: 767px) {
@@ -392,11 +356,37 @@ p {
     z-index: 2;
     color: aliceblue;
   }
+  .mobile-menu {
+    position: fixed;
+    left: 0;
+    top: 80px;
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(180deg, #191f32 2.92%, #305e8a 49.72%, #4aa7f0 97.41%);
+    z-index: 1;
+    opacity: 0;
+    transition: transform 250ms var(--timing-function), opacity 250ms var(--timing-function);
+    pointer-events: none;
+  }
+  .mobile-menu.is-open {
+    opacity: 1;
+    transform: translateY(0%);
+    pointer-events: all;
+  }
+  .mobile-menu .navbar__list {
+    flex-flow: column;
+  }
+  .mobile-menu .navbar-dropdown {
+    display: block;
+    position: relative;
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 300ms var(--timing-function);
+  }
+  .dropdown__button--open ~ .navbar-dropdown {
+    max-height: 25rem;
+  }
 }
-.slider__controls {
-  display: none;
-}
-
 .hero {
   position: relative;
   background: linear-gradient(180deg, #191f32 2.92%, #305e8a 49.72%, #4aa7f0 97.41%);
@@ -447,7 +437,7 @@ p {
 .hero__description {
   color: var(--secondary-text-color);
   font-size: 20px;
-  padding-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .hero__buttons {
@@ -540,10 +530,14 @@ p {
   }
 }
 @media screen and (max-width: 767px) {
-  .hero-buttons {
+  .hero__buttons {
     flex-flow: column;
   }
 }
+.slider__controls {
+  display: none;
+}
+
 .prices__container {
   position: relative;
 }
