--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -135,6 +135,56 @@
   white-space: nowrap;
 }
 
+.dropdown__list {
+  color: var(--secondary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  text-transform: uppercase;
+  padding: 15px 5px;
+  align-items: center;
+  display: flex;
+  transition: color 300ms var(--timing-function);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+
+.navbar-dropdown {
+  z-index: 1;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  display: none;
+  background-color: var(--secondary-text-color);
+  color: var(--primary-text-color);
+
+  padding: 0;
+}
+
+.dropdown--mt14 {
+  margin-top: 14px;
+}
+
+.dropdown__link {
+  font-size: 14px;
+  text-transform: uppercase;
+  color: var(--primary-text-color);
+  white-space: nowrap;
+  padding: 10px 15px;
+  transition: background-color 300ms var(--timing-function);
+
+  &:hover,
+  &:focus {
+    background-color: var(--light-blue-text);
+  }
+}
+
+.dropdown__button--open + .navbar-dropdown {
+  display: block;
+}
+
 .vsys-logo--christmas-hat {
   &::before {
     content: "";
@@ -152,19 +202,58 @@
   color: #4aa7f0;
 }
 
+.mobile-open {
+  overflow: hidden;
+}
+
 .menu-button {
   display: none;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  z-index: 2;
+
+  .icon-close {
+    display: none;
+  }
+}
+
+.icon-menu {
+  fill: currentColor;
+}
+
+.icon-close {
+  fill: currentColor;
+}
+
+.menu-button.is-open .icon-close {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+.menu-social {
+  display: none;
+}
+
+.site-nav__link.site-nav__link--active {
+  color: var(--accent-color);
+}
+
+.mobile-menu {
+  width: 60%;
 }
 
 @media screen and (max-width: 1199px) {
   .topbar {
     gap: 5%;
   }
-}
 
-@media screen and (min-width: 1200px) {
-  .topbar {
-    gap: 30%;
+  .mobile-menu {
+    width: 100%;
   }
 }
 
@@ -182,8 +271,46 @@
     z-index: 2;
     color: aliceblue;
   }
-}
 
-.slider__controls {
-  display: none;
+  .mobile-menu {
+    position: fixed;
+    left: 0;
+    top: 80px;
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(
+      180deg,
+      #191f32 2.92%,
+      #305e8a 49.72%,
+      #4aa7f0 97.41%
+    );
+    z-index: 1;
+    opacity: 0;
+    // transform: translateY(-100%);
+    transition: transform 250ms var(--timing-function),
+      opacity 250ms var(--timing-function);
+    pointer-events: none;
+
+    &.is-open {
+      opacity: 1;
+      transform: translateY(0%);
+      pointer-events: all;
+    }
+
+    .navbar__list {
+      flex-flow: column;
+    }
+
+    .navbar-dropdown {
+      display: block;
+      position: relative;
+      overflow: hidden;
+      max-height: 0;
+      transition: max-height 300ms var(--timing-function);
+    }
+  }
+
+  .dropdown__button--open ~ .navbar-dropdown {
+    max-height: 25rem;
+  }
 }
