--- a/css/main.css
+++ b/css/main.css
@@ -71,13 +71,14 @@ p {
   border-left: 4px solid transparent;
 }
 
-.text--blue {
+.text--lightblue {
   font-weight: 600;
   color: var(--light-blue-text);
 }
 
 .section-title {
-  font-size: 40px;
+  font-family: var(--title-font);
+  font-size: 36px;
   background: -webkit-linear-gradient(#333d5e, #4aa7f0);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -127,6 +128,7 @@ p {
 }
 
 .topbar-quality__link {
+  font-size: 14px;
   color: var(--secondary-text-color);
   position: relative;
   white-space: nowrap;
@@ -157,6 +159,20 @@ p {
   width: 50%;
 }
 
+.dropdown__button {
+  color: var(--secondary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  text-transform: uppercase;
+  padding: 15px 5px;
+  align-items: center;
+  display: flex;
+  transition: color 300ms var(--timing-function);
+}
+.dropdown__button:hover, .dropdown__button:focus {
+  color: var(--accent-color);
+}
+
 .topbar__button {
   font-family: var(--primary-font);
   font-size: 14px;
@@ -179,8 +195,8 @@ p {
 }
 
 .topbar__button--white {
-  background-color: var(--secondary-text-color);
-  color: var(--secondary-background-color);
+  background-color: var(--primary-background-color);
+  color: var(--primary-text-color);
 }
 .topbar__button--white:hover, .topbar__button--white:focus {
   background-color: var(--light-blue-text);
@@ -230,20 +246,6 @@ p {
   font-size: 16px;
   position: relative;
   white-space: nowrap;
-}
-
-.dropdown__list {
-  color: var(--secondary-text-color);
-  font-weight: 500;
-  font-size: 14px;
-  text-transform: uppercase;
-  padding: 15px 5px;
-  align-items: center;
-  display: flex;
-  transition: color 300ms var(--timing-function);
-}
-.dropdown__list:hover, .dropdown__list:focus {
-  color: var(--accent-color);
 }
 
 .navbar-dropdown {
@@ -373,18 +375,43 @@ p {
     transform: translateY(0%);
     pointer-events: all;
   }
+  .mobile-menu .mobile-menu__container {
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    box-sizing: border-box;
+    align-items: center;
+  }
   .mobile-menu .navbar__list {
     flex-flow: column;
   }
+  .mobile-menu .navbar__item {
+    width: 50%;
+  }
   .mobile-menu .navbar-dropdown {
+    background-color: rgba(168, 213, 248, 0.1);
     display: block;
     position: relative;
     overflow: hidden;
     max-height: 0;
     transition: max-height 300ms var(--timing-function);
   }
-  .dropdown__button--open ~ .navbar-dropdown {
+  .mobile-menu .dropdown__link {
+    color: var(--secondary-text-color);
+    transition: color 300ms var(--timing-function), background-color 300ms var(--timing-function);
+  }
+  .mobile-menu .dropdown__link:hover {
+    color: var(--primary-text-color);
+  }
+  .mobile-menu .dropdown__button--open ~ .navbar-dropdown {
     max-height: 25rem;
+  }
+  .mobile-menu .dropdown__button {
+    padding-left: 0;
+    padding-right: 0;
+    width: 100%;
+    justify-content: space-between;
   }
 }
 .hero {
@@ -527,6 +554,9 @@ p {
   .hero__buttons {
     gap: 80px;
     justify-content: center;
+  }
+  .hero__title--nowrap {
+    display: none;
   }
 }
 @media screen and (max-width: 767px) {
@@ -701,7 +731,7 @@ p {
 .footer__box {
   display: flex;
   flex-flow: column;
-  gap: 10px;
+  gap: 20px;
 }
 
 .footer-nav__list {
@@ -713,15 +743,16 @@ p {
 .footer__subtitle {
   font-family: var(--title-font);
   color: var(--secondary-text-color);
-  font-size: 16px;
+  font-size: 14px;
   text-transform: uppercase;
 }
 
 .footer-nav__link {
   color: var(--secondary-text-color);
   font-weight: 500;
-  font-size: 16px;
+  font-size: 14px;
   transition: color 300ms var(--timing-function);
+  text-transform: uppercase;
 }
 .footer-nav__link:hover {
   color: var(--accent-color);
@@ -732,7 +763,7 @@ p {
   font-style: normal;
   margin-bottom: 20px;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 14px;
 }
 
 .footer-contacts__link {
@@ -746,7 +777,7 @@ p {
   font-family: var(--title-font);
   color: var(--secondary-text-color);
   font-style: normal;
-  font-size: 18px;
+  font-size: 14px;
   text-transform: uppercase;
 }
 
@@ -754,7 +785,7 @@ p {
   font-family: var(--title-font);
   color: var(--secondary-text-color);
   font-style: normal;
-  font-size: 18px;
+  font-size: 14px;
 }
 
 .footer-social__list {
@@ -777,13 +808,17 @@ p {
   margin-top: 30px;
 }
 
+.footer-payment__subtitle {
+  font-size: 14px;
+}
+
 .footer-payment__link {
-  width: 70px;
+  width: 60px;
   height: 40px;
   background-color: var(--primary-background-color);
   display: flex;
   align-items: center;
-  border-radius: 4px;
+  border-radius: 5px;
 }
 
 .footer-payment__img {
