--- a/sass/base/_utils.scss
+++ b/sass/base/_utils.scss
@@ -73,13 +73,14 @@ p {
   border-left: 4px solid transparent;
 }
 
-.text--blue {
+.text--lightblue {
   font-weight: 600;
   color: var(--light-blue-text);
 }
 
 .section-title {
-  font-size: 40px;
+  font-family: var(--title-font);
+  font-size: 36px;
   background: -webkit-linear-gradient(#333d5e, #4aa7f0);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
