--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -29,7 +29,7 @@
 .footer__box {
   display: flex;
   flex-flow: column;
-  gap: 10px;
+  gap: 20px;
 }
 
 .footer-nav__list {
@@ -41,15 +41,16 @@
 .footer__subtitle {
   font-family: var(--title-font);
   color: var(--secondary-text-color);
-  font-size: 16px;
+  font-size: 14px;
   text-transform: uppercase;
 }
 
 .footer-nav__link {
   color: var(--secondary-text-color);
   font-weight: 500;
-  font-size: 16px;
+  font-size: 14px;
   transition: color 300ms var(--timing-function);
+  text-transform: uppercase;
 
   &:hover {
     color: var(--accent-color);
@@ -61,7 +62,7 @@
   font-style: normal;
   margin-bottom: 20px;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 14px;
 }
 
 .footer-contacts__link {
@@ -76,7 +77,7 @@
   font-family: var(--title-font);
   color: var(--secondary-text-color);
   font-style: normal;
-  font-size: 18px;
+  font-size: 14px;
   text-transform: uppercase;
 }
 
@@ -84,7 +85,7 @@
   font-family: var(--title-font);
   color: var(--secondary-text-color);
   font-style: normal;
-  font-size: 18px;
+  font-size: 14px;
 }
 
 .footer-social__list {
@@ -107,13 +108,17 @@
   margin-top: 30px;
 }
 
+.footer-payment__subtitle {
+  font-size: 14px;
+}
+
 .footer-payment__link {
-  width: 70px;
+  width: 60px;
   height: 40px;
   background-color: var(--primary-background-color);
   display: flex;
   align-items: center;
-  border-radius: 4px;
+  border-radius: 5px;
 }
 
 .footer-payment__img {
