--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -22,6 +22,7 @@
 }
 
 .topbar-quality__link {
+  font-size: 14px;
   color: var(--secondary-text-color);
   position: relative;
   white-space: nowrap;
@@ -54,6 +55,22 @@
   width: 50%;
 }
 
+.dropdown__button {
+  color: var(--secondary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  text-transform: uppercase;
+  padding: 15px 5px;
+  align-items: center;
+  display: flex;
+  transition: color 300ms var(--timing-function);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+
 .topbar__button {
   font-family: var(--primary-font);
   font-size: 14px;
@@ -78,8 +95,8 @@
 }
 
 .topbar__button--white {
-  background-color: var(--secondary-text-color);
-  color: var(--secondary-background-color);
+  background-color: var(--primary-background-color);
+  color: var(--primary-text-color);
 
   &:hover,
   &:focus {
@@ -133,22 +150,6 @@
   font-size: 16px;
   position: relative;
   white-space: nowrap;
-}
-
-.dropdown__list {
-  color: var(--secondary-text-color);
-  font-weight: 500;
-  font-size: 14px;
-  text-transform: uppercase;
-  padding: 15px 5px;
-  align-items: center;
-  display: flex;
-  transition: color 300ms var(--timing-function);
-
-  &:hover,
-  &:focus {
-    color: var(--accent-color);
-  }
 }
 
 .navbar-dropdown {
@@ -297,20 +298,58 @@
       pointer-events: all;
     }
 
+    .mobile-menu__container {
+      padding-left: 15px;
+      padding-right: 15px;
+      margin-left: auto;
+      margin-right: auto;
+      box-sizing: border-box;
+      align-items: center;
+    }
+
     .navbar__list {
       flex-flow: column;
     }
 
+    .navbar__item {
+      width: 50%;
+    }
+
     .navbar-dropdown {
+      background-color: rgba(168, 213, 248, 0.1);
       display: block;
       position: relative;
       overflow: hidden;
       max-height: 0;
       transition: max-height 300ms var(--timing-function);
     }
-  }
 
-  .dropdown__button--open ~ .navbar-dropdown {
-    max-height: 25rem;
+    .dropdown__link {
+      color: var(--secondary-text-color);
+      transition: color 300ms var(--timing-function),
+        background-color 300ms var(--timing-function);
+
+      &:hover {
+        color: var(--primary-text-color);
+      }
+    }
+
+    //   .dropdown__link:hover {
+    //     color: var(--primary-text-color);
+    //   }
+    // }
+
+    .dropdown__button--open ~ .navbar-dropdown {
+      max-height: 25rem;
+    }
+
+    .dropdown__button {
+      padding-left: 0;
+      padding-right: 0;
+
+      width: 100%;
+      justify-content: space-between;
+      // border-bottom: 0.5px solid currentColor;
+    }
   }
 }
