--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -14,7 +14,7 @@
   --light-blue-text: #a8d5f8;
   --grey-text-color: #6c6c6c;
   --price-accent-color: #333d5e;
-
+  --price-card-bcg: #e9f5ff;
   --accent-color: #4aa7f0;
 
   --primary-background-color: #ffffff;
