--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,6 @@
 @import "./base/variables";
 @import "./components/header";
 @import "./components/hero";
-@import "./components/prices";
+@import "./components/services";
 @import "./components/faq";
 @import "./components/footer";
