--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,18 @@ p {
   background: -webkit-linear-gradient(#333d5e, #4aa7f0);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  margin: 60px 0;
+}
+
+.services-dedicated__list {
+  justify-content: space-between;
+  flex-wrap: wrap;
+  display: flex;
+  row-gap: 40px;
+}
+
+.services-dedicated__item {
+  width: 30%;
 }
 
 :root {
@@ -94,6 +106,7 @@ p {
   --light-blue-text: #a8d5f8;
   --grey-text-color: #6c6c6c;
   --price-accent-color: #333d5e;
+  --price-card-bcg: #e9f5ff;
   --accent-color: #4aa7f0;
   --primary-background-color: #ffffff;
   /* --secondary-background-color: linear-gradient(red, yellow); */
@@ -568,74 +581,138 @@ p {
   display: none;
 }
 
-.prices__container {
+#servers_button:checked ~ #servicesContent,
+#hosting_button:checked ~ #hostingContent,
+#cloud_button:checked ~ #cloudContent,
+#services_button:checked ~ #servicesContent {
+  display: block;
+}
+
+.services__container {
   position: relative;
 }
 
-.prices-menu {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  gap: 5%;
+input[type=radio] {
+  opacity: 0;
   position: absolute;
-  bottom: -100%;
-  z-index: 10;
+  top: 0;
+  left: 0;
+  margin: 0;
 }
 
-.prices-menu__item {
-  box-sizing: border-box;
+.services-menu {
   display: flex;
-  gap: 10px;
-  width: 25%;
-  padding: 20px 15px 15px 15px;
-  background-color: var(--secondary-text-color);
-  border-radius: 15px 15px 0 0;
   justify-content: space-between;
-  transition: scale 300ms var(--timing-function);
-}
-.prices-menu__item:hover {
-  padding: 19px 14px 14px 14px;
-  scale: 1.05;
-  border-top: 1px solid var(--price-accent-color);
-  border-left: 1px solid var(--price-accent-color);
-  border-right: 1px solid var(--price-accent-color);
 }
 
-.prices-menu__img {
-  width: 60px;
-  height: 60px;
+.services-cards__list {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
 }
 
-.prices-menu__svg {
+.services-cards__item {
+  width: 25%;
+  padding: 20px 20px;
+}
+.services-cards__item:hover {
+  filter: drop-shadow(0px 5px 11px rgba(0, 0, 0, 0.25));
+  transform: scale(1.02);
+}
+
+.services-cards__item--blue {
+  background-color: var(--price-card-bcg);
+}
+
+.services-cards__item--white {
+  background-color: var(--primary-background-color);
+  outline: 3px solid var(--price-card-bcg);
+}
+.services-cards__item--white .services-cards__price {
+  background-color: var(--price-card-bcg);
+}
+.services-cards__item--white:hover {
+  outline: none;
+}
+
+.services-cards__title {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.services-cards__price {
+  flex-flow: var(--title-font);
+  font-weight: 900;
+  color: var(--accent-color);
+  font-size: 18px;
+  max-width: fit-content;
   margin: 0 auto;
+  background-color: var(--primary-background-color);
+  padding: 10px 20px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.services-cards__info {
+  display: flex;
+  justify-content: space-between;
+  font-size: 12px;
+  opacity: 0.6;
+  margin-bottom: 6px;
+}
+
+.services-cards__value {
+  font-size: 12px;
+  text-align: right;
+  opacity: 1;
+}
+
+.serversContent {
   width: 100%;
 }
 
-.prices-menu__content {
-  width: 70%;
-}
-
-.prices-menu__title {
-  color: var(--accent-color);
-  font-weight: 700;
-  font-size: 16px;
-  text-decoration-line: underline;
+.services-cards__button {
+  text-align: center;
+  border-radius: 15px;
   text-transform: uppercase;
-  margin-bottom: 5px;
-  text-align: center;
+  font-size: 12px;
   white-space: nowrap;
+  padding: 15px 20px;
+  margin-top: 20px;
 }
 
-.prices-menu__info {
-  color: var(--price-accent-color);
-  text-align: center;
-  font-size: 16px;
+.services-cards__button--white {
+  font-family: var(--buttons-font);
+  color: var(--primary-background-color);
+  background-color: var(--accent-color);
+  outline: 1px solid var(--primary-background-color);
+}
+.services-cards__button--white:hover {
+  color: var(--accent-color);
+  background-color: var(--primary-background-color);
+  outline: 1px solid var(--accent-color);
 }
 
-.prices-menu__price {
-  color: var(--price-accent-color);
-  font-weight: 600;
+.services-dedicated__title {
+  color: var(--primary-text-color);
   font-size: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.menu-arrow--right {
+  border-top: 6px dashed;
+  border-top: 6px solid\9 ;
+  border-right: 6px solid transparent;
+  border-left: 6px solid transparent;
+  transform: rotate(-90deg);
+}
+
+.services-dedicated__description {
+  color: var(--primary-text-color);
+  font-size: 14px;
 }
 
 .faq {
